--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 
 after_success:
- - scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa target/bluemoep-LocalTwitter-0.1.0.war it14g07@ems.informatik.uni-oldenburg.de:/user/proj/it14/it14g07/jetty/webapps
+ - scp -o StrictHostKeyChecking=no target/bluemoep-LocalTwitter-0.1.0.war it14g07@ems.informatik.uni-oldenburg.de:/user/proj/it14/it14g07/jetty/webapps
