--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ after_success:
 - echo -n $id_rsa_{1..23} >> ~/.ssh/travis_rsa_64
 - base64 --decode --ignore-garbage ~/.ssh/travis_rsa_64 > ~/.ssh/id_rsa
 - chmod 600 ~/.ssh/id_rsa
-- scp -o StrictHostKeyChecking=no target/bluemoep-LocalTwitter-0.1.0.war it14g07@ems.informatik.uni-oldenburg.de:/user/proj/it14/it14g07/jetty/webapps
+- scp -o StrictHostKeyChecking=no target/bluemoep-LocalTwitter-0.1.0.war it14g07@ems.informatik.uni-oldenburg.de:/user/proj/it14/it14g07/jetty/webapps/ROOT.war
 
 env:
   global:
