Habe es endlich zum Laufen bekommen. Mit SignPost geht es wirklich einfach, wenn man genau weiß was man davon denn eigentlich wirklich nur braucht.
Die Authentifizierung sollte auch für weitere Dinge kein Problem
darstellen.

--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,19 @@
 			<artifactId>signpost-core</artifactId>
 			<version>1.2.1.2</version>
 		</dependency>
-	
+
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.3.4</version>
+			<groupId>oauth.signpost</groupId>
+			<artifactId>signpost-commonshttp4</artifactId>
+			<version>1.2.1.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
