--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-maven-plugin</artifactId>
+			<version>8.1.15.v20140411</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -61,10 +67,6 @@
 						</resource>
 					</webResources>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
 			</plugin>
 		</plugins>
 
