--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<version>1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
